--- a/web/Projects/basic form/page1.html
+++ b/web/Projects/basic form/page1.html
@@ -40,5 +40,6 @@
             <button type="button" onclick="nextPage('parties.html')">Next</button>
         </div>
     </form>
+    <script src=""></script>
 </body>
 </html>
